# pylinac

./: .bumpversion.cfg  .checkignore  .cursorignore  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .grype.yaml  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGES.txt  Dockerfile-pipeline-image  Dockerfile-test  LICENSE.txt  MANIFEST.in  README.md  README.rst  READMEmd.md  _pyproject.toml  _rtd_reqs.txt  bitbucket-pipelines.yml  checklist.txt  condaenv.yml  conftest.py  ez_setup.py  main.py  memory_monitor.sh  noxfile.py  offsetbb.py  playground.py  pylinacconfig.yml  pyproject.toml  pytest.ini  readthedocs.yaml  readthedocs.yml  requirements-dev.txt  requirements-ram.txt  (+8 more)
.cursor/commands/: clean-up.md  generate-pull-request.md  pull-request-review.md  refactor.md
.cursor/rules/: python-rule.mdc
.github/workflows/: pypi_upload.yml  python-publish.yml
Files/RapidArc QA Test Procedures and Files for C-Series/: P1012382-001-Rev A-RapidArc QA Test Procedure Calculation Spreadsheet.xls
Files/RapidArc QA Test Procedures and Files for TrueBeam/: P1012382-001-Rev A-RapidArc QA Test Procedure Calculation Spreadsheet.xls
Files/VMAT QA dicom files/: T0.2_PicketFenceStatic_M120.dcm  T1.1_PicketFenceRA_M120.dcm  T2_DoseRateGantrySpeed_M120.dcm  T3_MLCSpeed_M120.dcm
conda/pylinac/: meta.yaml
conda_recipe/pylinac/: meta.yaml
docs/: Makefile  make.bat
docs/source/: AGENTS.md  acr.rst  calibration_docs.rst  cbct.rst  cbct_docs.rst  changelog.rst  cheese.rst  conf.py  contrib.rst  contributing.rst  core_modules.rst  developer.rst  field_analysis.rst  field_profile_analysis.rst  flatsym.rst  general_tips.rst  getting_started.rst  helios.rst  image_generator.rst  imgcls_docs.rst  index.rst  installation.rst  log_analyzer.rst  module_documentation.rst  nuclear.rst  overview.rst  picketfence.rst  plan_generator.rst  planar_imaging.rst  pylinac_core_hacking.ipynb  pylinac_core_hacking.rst  quart.rst  roadmap.rst  starshot_docs.rst  tg51_docs.rst  tool_guide.rst  topics.rst  troubleshooting.rst  v4_changes.rst  vmat_docs.rst  (+3 more)
image_generator/: generate_dcm.py
joss/: paper.bib  paper.md
machinelearning/: pylinac_images.py  pylinac_learner.py  tools.py
machinelearning/cbct/: build_cbct_images.py  build_cbct_learner.py  cbct_learner.py
machinelearning/picketfence/: build_picketfence_images.py  build_picketfence_learner.py  strip_pfs.py
machinelearning/singleimage/: build_single_image_classifier.py  build_single_image_learner.py  pylinac_images.py  pylinac_learner.py
machinelearning/vmat/: build_vmat_images.py  build_vmat_learner.py  strip_vmats.py
pylinac/: __init__.py  acr.py  cbct.py  cheese.py  ct.py  dlg.py  field_analysis.py  field_analysis_v2.py  field_profile_analysis.py  fieldparams.py  flatsym.py  geometry.py  gui.py  helios.py  kv.py  log_analyzer.py  nuclear.py  picketfence.py  planar_imaging.py  py_gui.py  quart.py  scripts.py  settings.py  starshot.py  tg51.py  utilities.py  version.py  vmat.py  watcher.py  watcher_config.yaml  watcher_config.yml  winston_lutz.py
pylinac/calibration/: tg51.py  trs398.py
pylinac/cbctqa/: __init__.py  cbct.py
pylinac/common/: common_functions.py  decorators.py  image_classes.py  peakdetect.py
pylinac/contrib/: orthogonality.py  quasar.py
pylinac/core/: analysis.py  array_utils.py  common_functions.py  contrast.py  decorators.py  exceptions.py  gamma.py  geometry.py  hill.py  hillreg.py  image.py  image_classes.py  io.py  mask.py  metrics.py  mtf.py  nps.py  pdf.py  plotly_utils.py  profile.py  roi.py  scale.py  schedule.py  tcdd.py  typing.py  utilities.py  validators.py  vmatIMAGE.py  warnings.py
pylinac/demo_files/: Doselab_MV.dcm  lasvegas.dcm
pylinac/loganalyzer/: __init__.py  log_analyzer.py
pylinac/metrics/: features.py  image.py  profile.py  utils.py
pylinac/phantoms/: CATPHAN_PYLINAC_NOTES.md  CP504.py  CP600.py  CP604.py  CP700.py  __init__.py
pylinac/plan_generator/: dicom.py  fluence.py  mlc.py  prefabs.py
pylinac/starshot/: __init__.py  starshot.py
pylinac/vmatqa/: __init__.py  vmat.py
pyqa_gui/: PyQA.pyw  PyQA.ui  PyQA_ui2py.py  PyQAui.py  PyQAui.ui  matplotlibwidget.py
scripts/: prefab_plan_generator.py
tests/: __init__.py  _test_all.py  _test_all_cbcts.py  _test_all_logs.py  _test_all_picketfences.py  _test_all_planar_images.py  _test_all_planar_phantoms.py  _test_all_starshots.py  _test_all_winstonlutz.py  _test_alls.py  _test_bank_cbcts.py  _test_bank_logs.py  _test_bank_picketfences.py  _test_bank_planar_phantoms.py  _test_bank_starshots.py  _test_bank_winston_lutz.py  test_all.py  test_cbct.py  test_flatsym.py  test_kv.py  test_log_analyzer.py  test_logs.py  test_picketfence.py  test_planar_imaging.py  test_scripts.py  test_starshot.py  test_tg51.py  test_trs398.py  test_vmat.py  test_watcher.py  test_winstonlutz.py  utils.py
tests/core/: test_decorators.py  test_geometry.py  test_image.py  test_io.py  test_profile.py  test_utilities.py
tests/test_files/: DRMLCmlc-105-example.dcm
tests_bank/: _test_bank_cbcts.py  _test_bank_logs.py  _test_bank_picketfences.py  _test_bank_planar_phantoms.py  _test_bank_starshots.py  _test_bank_winston_lutz.py
tests_basic/: AGENTS.md  __init__.py  _test_all.py  conftest.py  test_acr.py  test_cbct.py  test_cheese.py  test_dlg.py  test_field_analysis.py  test_field_profile_analysis.py  test_fieldparams.py  test_flatsym.py  test_generated_plans.py  test_helios.py  test_logs.py  test_nuclear.py  test_picketfence.py  test_plan_generator.py  test_planar_imaging.py  test_quart.py  test_starshot.py  test_tg51.py  test_trs398.py  test_vmat.py  test_watcher.py  test_winstonlutz.py  test_winstonlutz_mtmf.py  utils.py
tests_basic/contrib/: test_orthogonality.py  test_quasar.py
tests_basic/core/: profile_regression_fixtures.py  test_array_utils.py  test_contrast.py  test_decorators.py  (+16 more)
tests_complete/: _test_all_cbcts.py  _test_all_logs.py  _test_all_picketfences.py  _test_all_planar_phantoms.py  _test_all_starshots.py  _test_all_winstonlutz.py  _test_alls.py
tools/: __init__.py  test_all.py
(+3159 files in other folders)
