[tool.poetry]
name = "pylinac"
version = "3.16.0"
description = "A toolkit for performing TG-142 QA-related tasks on a linear accelerator"
authors = ["James Kerns <jkerns100@gmail.com>"]
license = "MIT"
readme = "README.rst"
documentation = "https://pylinac.readthedocs.io/en/latest/"
repository = "https://github.com/jrkerns/pylinac"
keywords = ["medical", "physics", "image", "analysis", "TG-142"]
packages = [
    { include = "pylinac", format = 'wheel' },
]
include = ['pylinac/files/*.png']
exclude = ['pylinac/demo_files/**']
classifiers=[
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.8.10"
scikit-image = ">=0.17.3"
numpy = ">=0.16"
scipy = ">=1.1"
tqdm = ">=3.8"
Pillow = ">=4.0"
argue = "^0.3.1"
py-linq = "^1.3.0"
reportlab = ">=3.3"
pydicom = ">=2.0"
matplotlib = ">=2.0"
tabulate = "~0.9.0"

[tool.poetry.dev-dependencies]
pytest = {version = "^7.1.2", python = ">=3.8,<4.0"}
bump2version = "^1.0.1"
nox = "^2022.1.7"
pytest-xdist = "^2.5.0"
google-cloud-storage = {version = "^2.4.0", python = ">=3.8,<4.0"}
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests_basic"
python_files = "test_*.py"
addopts = "--dist loadscope"

[tool.coverage.run]
source = [
    "pylinac"
]

[tool.black]
line-length = 88
#experimental-string-processing = true  # TODO: enable in the future: https://github.com/psf/black/issues/1802

[tool.ruff]
select = ['E', 'F', 'I', 'UP']
line-length = 180
target-version = 'py38'
ignore = ['F842', 'E722', 'E501']

[tool.ruff.per-file-ignores]
"*/__init__.py" = ["F401"]
"pylinac/calibration/trs398.py" = ["F401", "I001"]
"pylinac/core/profile.py" = ['F821']
