[project]
name = "pylinac"
requires-python = ">=3.8"
description = "A toolkit for performing TG-142 QA-related tasks on a linear accelerator"
authors = [
    {name = "James Kerns", email = "jkerns100@gmail.com"}
]
dynamic = [
   "version"  # this will be set by hatch
]
license = "MIT"
readme = "README.rst"
documentation = "https://pylinac.readthedocs.io/en/latest/"
repository = "https://github.com/jrkerns/pylinac"
keywords = ["medical", "physics", "image", "analysis", "TG-142"]
classifiers=[
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries"
]

dependencies = [
    "scikit-image>=0.17.3",
    "numpy>=0.16,<2",
    "scipy>=1.1",
    "tqdm>=3.8",
    "Pillow>=4.0",
    "argue~=0.3.1",
    "py-linq~=1.4.0",
    "reportlab>=3.3",
    "pydicom>=2.0,<3",
    "matplotlib>=2.0",
    "tabulate~=0.9.0",
    "pydantic>=2.0",
    "eval-type-backport; python_version<='3.8'",
    "quaac",
    "plotly>=5.0",
    "nox>=2024.4.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
directory = "dist"

[tool.hatch.version]
# https://hatch.pypa.io/latest/version/
path = "pylinac/version.py"  # hatch will automatically set the version to the value in this file.

[tool.hatch.build.targets.wheel]
packages = ["pylinac"]
include = ['pylinac/files/*.png']
exclude = ['pylinac/demo_files/**']

[tool.hatch.build.targets.sdist]
packages = ["pylinac"]
include = ['pylinac/files/*.png']
exclude = ['pylinac/demo_files/**']

[tool.pytest.ini_options]
testpaths = "tests_basic"
python_files = "test_*.py"
addopts = "--dist loadscope"
filterwarnings = [
    "ignore::UserWarning:pydicom",
    "ignore:FigureCanvasAgg.*:UserWarning"
    ]
markers = [
    'catphan604',
]

[tool.coverage.run]
source = [
    "pylinac"
]

[tool.black]
line-length = 88
#experimental-string-processing = true  # TODO: enable in the future: https://github.com/psf/black/issues/1802

[tool.ruff]
select = ['E', 'F', 'I', 'UP', "W", "NPY", "FLY"]
line-length = 180
target-version = 'py38'
ignore = ['E501']

[tool.ruff.per-file-ignores]
"*/__init__.py" = ["F401"]
"pylinac/calibration/trs398.py" = ["F401", "I001"]
"pylinac/core/profile.py" = ['F821']

[tool.uv]
dev-dependencies = [
    "autodoc-pydantic>=2.1.0",
    "furo>=2024.8.6",
    "google-cloud-storage>=2.18.2",
    "parameterized>=0.9.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.5.0",
    "sphinx>=7.1.2",
]
